--- a/JuPlus/Info.plist
+++ b/JuPlus/Info.plist
@@ -43,7 +43,7 @@
 			<string>Icon@2x</string>
 			<key>CFBundleURLSchemes</key>
 			<array>
-				<string>34489026</string>
+				<string>sina.34489026</string>
 			</array>
 		</dict>
 	</array>
